<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activities.ActivitiesAdmin.DetalleReservacion"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:background="#F7F7F7"
        android:orientation="vertical"
        android:textAlignment="center"
        android:layout_margin="20dp">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_gravity="top"
            android:contentDescription="@string/mensaje"
            app:srcCompat="@drawable/fondo_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formularioReservacion"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:ems="10"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/Nombre"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/etNombreD"
                android:textColor="@android:color/holo_blue_dark"
                android:textAlignment="center"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/Observacion"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etObservacionD"
                android:textColor="@android:color/holo_blue_dark"
                android:textAlignment="center"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/cant_asientos"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etCant_asientosD"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginBottom="10dp"

                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/hora"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etHoraD"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"

                />



        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnActualizarR"
            android:text="@string/Actualizar"
            android:textColor="@android:color/white"
            android:background="@color/fondo_verde"
            android:layout_marginBottom="10dp"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEliminarR"
            android:text="@string/Eliminar"
            android:textColor="@android:color/white"
            android:background="@color/fondo_rojo"

            />

    </LinearLayout>


</LinearLayout>