<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activities.ActivitiesAdmin.DetalleUsuarios">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#F7F7F7"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            app:srcCompat="@drawable/fondo_3"
            android:contentDescription="@string/mensaje"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_usuario"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:ems="10"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/Cedula"
                android:textColor="@color/fondo_verde" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editCedula"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/Nombre"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editNombre"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/Apellido"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editApellido"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tw_usuario"
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/Usuario"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editUsuario"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/Clave"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_form_pass"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"

                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/conf_contra"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_pass_confirmar"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"

                />



        </LinearLayout>





        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_editar_usuario"
            android:text="@string/editarUsuario"
            android:textColor="@android:color/white"
            android:background="@color/fondo_verde"

            />

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_eliminar_usuario"
            android:text="@string/eliminarUsuario"
            android:textColor="@android:color/white"
            android:background="@color/fondo_rojo"

            />

    </LinearLayout>

</LinearLayout>