<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.Activities.ActivitiesAdmin.FormReservacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:background="#F7F7F7"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            app:srcCompat="@drawable/fondo_3"
            android:contentDescription="@string/mensaje"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formularioReservacion"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:ems="10"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/Nombre"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etformNomreserv"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/Observacion"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etFormObservacion"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/cant_asientos"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etformcantAsientos"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="number"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tw_usuario"
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/hora"
                android:textColor="@color/fondo_verde" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etformHora"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>




        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar_form_reservacion"
            android:text="@string/ingresar"
            android:textColor="@android:color/white"
            android:background="@color/fondo_verde"

            />



    </LinearLayout>

</LinearLayout>